# ai-customer-service

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.serena/: project.yml
src/backend/core/: CLAUDE.md  Dockerfile  pyproject.toml
src/backend/core/.serena/: project.yml
src/backend/core/.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
src/backend/core/app/: __init__.py  config.py  dependencies.py  main.py
src/backend/core/app/application/: __init__.py
src/backend/core/app/application/dto/: __init__.py  query_dto.py
src/backend/core/app/application/use_cases/: __init__.py  document_use_case.py  interaction_use_case.py  knowledge_base_use_case.py  query_use_case.py
src/backend/core/app/domain/: __init__.py
src/backend/core/app/domain/models/: __init__.py  chunk.py  citation.py  document.py  grounding.py  interaction.py  knowledge_base.py
src/backend/core/app/domain/ports/: __init__.py  document_store_port.py  interaction_store_port.py  llm_port.py  vectorstore_port.py
src/backend/core/app/domain/services/: __init__.py  grounding_service.py
src/backend/core/app/infrastructure/: __init__.py
src/backend/core/app/infrastructure/document_processing/: __init__.py  chunker.py  loader.py
src/backend/core/app/interfaces/: __init__.py
src/backend/core/tests/: conftest.py
src/backend/core/tests/application/: test_document_use_case.py  test_interaction_use_case.py  test_knowledge_base_use_case.py  test_query_use_case.py
src/backend/core/tests/domain/: test_grounding_service.py  test_models.py
(+114 files in other folders)
